Revision history for Perl extension {{$dist->name}}

{{$NEXT}}
    - Fix licensing and authors to ensure everyone's credited properly.
    - Add LWP::Protocol::https to the prerequisites.
    - Note deprecation of get_client() in 0.400. it's a private method
    - Note deprecation of get_clientM() in 0.400. it's a private method

0.301     2017-09-13
    - Get rid of the last of the 'use vars' pragma
    - Fix errant version number

0.300     2017-09-13
    - Fixed some spelling errors
    - Made IO::Socket::SSL v1.94 a prereq (TLS v1.1)
    - Added a cpanfile to maintain prereqs
    - Added the license file to the dist
    - Got rid of the 'use vars' pragma
    - Moved to Dist::Zilla for maintenance
    - Fixed license discrepancies. We've always stated that it's under the same
      license as Perl itself, but accidentally introduced Artistic 2.0 in the
      META. That has been put back to the Perl_5 license.

0.25 Nov 12 2015
    - change login URL from www.salesforce.com to login.salesforce.com [github/dclendenan]
      - www.salesforce.com will no longer be an API login endpoint as of Jan 1 2016

0.24 Aug 1 2015
    - https://github.com/redhotpenguin/WWW-Salesforce/pull/20

0.23 Aug 1 2015
    - fixed some POD errors
    - reformatted =item to =head2 in POD
    - alphabetized methods in POD
    - more clearly documented some features closing RT 48274
    - Added some pod and pod coverage tests
    - add stub pod for coverage tests
    - move pod close to code

0.22 Jan 23 2014
    - typo fixes [github/dsteinbrunner]
    - Force UTF8 to not be base64-encoded [github/pc-coholic]

0.21 Dec 30 2013
    - make all WWW::Salesforce::Simple methods available in WWW::Salesforce

0.20 Jun 18 2013
    - Clean up diagnostic messages in unit tests
    - above by Dave Clendenan

0.19 Jun 12 2013
    - Added web proxy support ($WWW::Salesforce::WEB_PROXY=http://my.proxy.com:8080)
    - added unit tests