@@ -5,6 +5,8 @@ Revision history for Perl extension {{$dist->name}}
     - Add LWP::Protocol::https to the prerequisites.
     - Note deprecation of get_client() in 0.400. it's a private method
     - Note deprecation of get_clientM() in 0.400. it's a private method
+    - Note deprecation of get_session_header() in 0.400. it's a private method
+    - Note deprecation of get_session_headerM() in 0.400. it's a private method
 
 0.301     2017-09-13
     - Get rid of the last of the 'use vars' pragma
